--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 body {
-    background-color: #22092C;
+    font-family: 'Noto Serif', serif;
+    background-color: rgb(2 6 23);
     color: #DDE6ED;
+    overflow-x: hidden;
 }
